# NivHenn

./: .gitignore  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  DOCS_INDEX.md  GETTING_STARTED.md  INTEGRATION_SUCCESS.md  LA_ANALYSIS_STATUS.md  MCP_SETUP.md  PROJECT_SUMMARY.md  README.md  SETUP.md  TEST_RUNNER_SUMMARY.md  VERCEL_DEPLOY.md  VISUAL_GUIDE.md  analyze_quiet.sh  demo_interactive.py  env.example  interactive_analyzer.py  pyproject.toml  render.yaml  requirements.full.txt  requirements.txt  run.py  setup.sh  test_LA_ALL.py  test_permits_la.py  test_runner.py  test_setup.py  vercel.json  verify_setup.py
.tmpvenv311/: pyvenv.cfg
NivHenn/: .gitignore  AAAA.py  README.md  analyze.sh  interactive_analyzer.py  mcp.json.example  pyproject.toml  test_fetch.py  test_serper.py
NivHenn/outputs/run10/: 37710744.html  (+1 more)
NivHenn/src/: __main__.py  cli.py  main.py
NivHenn/tests/: conftest.py  test_analyze_flow.py
NivHenn_OnlyUI/: .vercelignore  README.md  index.html  vercel.json
NivHenn_OnlyUI/api/: search.ts
NivHenn_OnlyUI/src/: App.tsx  api.ts  types.ts
api/: index.py
api/analyze/: listings.ts
config/: filters.json
data/: insurance.db
src/: __init__.py  cli.py  main.py  vercel_app.py
src/agents/: aggregator.py  la_property_ingestor.py  news_reddit.py
src/alerts/: email_alerts.py
src/app/: config.py  crew.py  html_report.py  la_socrata.py  models.py  scoring.py  serper_news.py
src/db/: database.py
src/parsing/: __init__.py  pdf_parser.py
src/rag/: rag_system.py
src/ui/: chat_panel.py  dialogs.py  policy_table.py
tests/: test_la_socrata.py
(+21 files in other folders)
